--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -44,6 +44,7 @@
 @import 'sections/my-courses-list';
 @import 'sections/my-course-aside';
 @import 'sections/my-course-body-tabs';
+@import 'sections/my-course-homework-body-tabs';
 
 //pages
 @import 'pages/index';
