--- a/src/pug/pages/my-course-homework.pug
+++ b/src/pug/pages/my-course-homework.pug
@@ -111,7 +111,7 @@ block content
 
           //begin my-course-body
           .my-course-body
-            include ../sections/my-course-homework-body-tabs
+            //-include ../sections/my-course-homework-body-tabs
           //end profile-edit-body
     //end content
 
