--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -45,6 +45,7 @@
 @import 'sections/my-course-aside';
 @import 'sections/my-course-body-tabs';
 @import 'sections/my-course-homework-body-tabs';
+@import 'sections/my-course-final';
 
 //pages
 @import 'pages/index';
