--- a/src/style/pages/_teachers.scss
+++ b/src/style/pages/_teachers.scss
@@ -1,3 +1,26 @@
+.teachers {
+  .courses-filter {
+    margin-top: -40px;
+    margin-bottom: 10px;
+  }
+  .btn--dark {
+    color: $light;
+    background-color: #4d4ce0;
+    &:hover {
+      background-color: #3c3bd1;
+    }
+  }
+  .btn--light {
+    color: $highlight-v;
+    background-color: transparent;
+    &:hover {
+      color: $light;
+      border-color: #9a9be9;
+      background-color: #9a9be9;
+    }
+  }
+}
+
 .teachers-header {
   margin-bottom: 33px;
 }
@@ -10,68 +33,6 @@
   color: #1e1e1e;
 }
 
-.teachers-main {
-  .container {
-    display: flex;
-    align-items: flex-start;
-
-    @include max(760) {
-      flex-wrap: wrap;
-    }
-  }
-}
-
-.teachers-aside {
-  overflow: hidden;
-  flex: none;
-  width: 270px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: #fff;
-
-  @include max(760) {
-    width: 100%;
-    margin-right: 0;
-  }
-}
-
-.teachers-filter__title {
-  font-family: $font;
-  font-size: 15px;
-  font-weight: 500;
-  text-align: center;
-  color: #1e1e1e;
-}
-
-.teachers-filter__select {
-  font-family: $font;
-  font-size: 14px;
-  font-weight: 300;
-  width: 100%;
-  height: 36px;
-  margin-bottom: 10px;
-  padding: 12px 30px 9px 20px;
-  color: #1e1e1e;
-  border: none;
-  border-radius: 18px !important;
-  background-color: #f0f0f5;
-  background-image: url('../img/arr-selectbox.svg');
-  background-repeat: no-repeat;
-  background-position: calc(100% - 15px) 50%;
-
-  appearance: none;
-  @include placeholder-color(#99a1ba);
-}
-
-.teachers-filter__checkbox {
-  margin: 7px 0;
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
 .teachers-list {
   display: flex;
   justify-content: space-between;
@@ -82,13 +43,19 @@
 
 .teachers-item {
   position: relative;
-  width: calc(50% - 15px);
+  display: flex;
+  flex-direction: column;
+  width: calc(33.33% - 20px);
   margin-bottom: 30px;
   padding: 20px 20px 10px 20px;
   border-radius: 5px;
   background-color: #fff;
 
-  @include max(1150) {
+  @include max(1220) {
+    width: calc(50% - 15px);
+  }
+
+  @include max(760) {
     width: 100%;
   }
 }
@@ -236,13 +203,13 @@
 
 .teachers-item__footer {
   display: flex;
-  //justify-content: space-between;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: auto;
   .btn {
-    width: auto;
-    margin-right: 10px;
+    width: 48%;
+    max-width: 155px;
     margin-bottom: 10px;
-    padding: 0 17px;
+    padding: 0 10px;
     white-space: nowrap;
     &:last-child {
       margin-right: 0;
