did style for wp textarea

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -16,6 +16,7 @@
 @import 'elements/pagination';
 @import 'elements/popup';
 @import 'elements/slickBase';
+@import 'elements/wp-textarea';
 
 //sections
 @import 'sections/footer';
