--- a/src/style/sections/_course-schedule.scss
+++ b/src/style/sections/_course-schedule.scss
@@ -1,13 +1,10 @@
 .course-schedule__slider {
   margin: 0 0 45px 0;
-  padding: 3px 0 0  0;
-  .slick-prev {
-    display: none !important;
-  }
+  padding: 3px 0 0 0;
+  .slick-prev,
   .slick-next {
     z-index: 2;
     top: 9px;
-    right: -20px;
     width: 40px;
     height: 40px;
     transition: .5s;
@@ -17,26 +14,47 @@
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: 15px 15px;
+
+    &:hover {
+      background-color: $highlight-v;
+    }
+  }
+  .slick-prev {
+    left: -20px;
+    display: none !important;
+    transform: translate(0, -50%) rotate(180deg);
+
+    @include max(768) {
+      left: -10px;
+    }
+    @include max(425) {
+      left: -5px;
+    }
+    &.active {
+      display: block !important;
+    }
+  }
+  .slick-next {
+    right: -20px;
+
     @include max(768) {
       right: -10px;
     }
     @include max(425) {
       right: -5px;
     }
-    &:hover {
-      background-color: $highlight-v;
-    }
   }
 }
+
 .course-schedule__slide {
   position: relative;
   padding: 25px 20px 0 0;
   list-style: none;
   span {
     font-size: 15px;
-    display: block;
     font-weight: 300;
     line-height: 23px;
+    display: block;
     max-width: 180px;
     color: #1e1e1e;
   }
