fixed dowload field

--- a/src/pug/sections/my-course-homework-body-tabs.pug
+++ b/src/pug/sections/my-course-homework-body-tabs.pug
@@ -110,8 +110,8 @@
       .my-course-homework__item
         h3.my-course-homework__item-title 6. Текст заголовок вопроса
         p Включает в себя фуднаментальную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладную психологию, изучающую, с опорой на данные фундаментальной психологии?
+        textarea.my-course-homework__item-textarea(placeholder='Задайте свой вопрос')
         .my-course-homework__item-downloads
-          .my-course-homework__item-download-field
           input(type='file')
           .download-files
           .my-course-homework__item-download-btn
