--- a/src/pug/sections/my-course-body-tabs.pug
+++ b/src/pug/sections/my-course-body-tabs.pug
@@ -31,8 +31,8 @@
 
 
       h2.my-course-body-tabs__tab-title Комментарии к занятию
-      include ../sections/profile-article-comment
-      include ../sections/profile-article-comment-2
+      include comments/profile-article-comment
+      include comments/profile-article-comment-2
       include ../sections/profile-article-footer-crop
     //end my-course-body-tabs__tab-01
 
@@ -50,8 +50,8 @@
         a(href="#").my-course-body-tabs__materials-link.my-course-body-tabs__materials-link--video Ссылка на видео (Youtube)
 
       h2.my-course-body-tabs__tab-title Комментарии к занятию
-      include ../sections/profile-article-comment
-      include ../sections/profile-article-comment-2
+      include comments/profile-article-comment
+      include comments/profile-article-comment-2
       include ../sections/profile-article-footer-crop
       //end my-course-body-tabs__materials
 
@@ -64,8 +64,8 @@
       include ../sections/my-course-questions
 
       h2.my-course-body-tabs__tab-title Комментарии к занятию
-      include ../sections/profile-article-comment
-      include ../sections/profile-article-comment-2
+      include comments/profile-article-comment
+      include comments/profile-article-comment-2
       include ../sections/profile-article-footer-crop
     //end my-course-body-tabs__tab-03
 //end my-course-body-tabs
