--- a/src/pug/sections/my-course-homework-body-tabs.pug
+++ b/src/pug/sections/my-course-homework-body-tabs.pug
@@ -133,8 +133,8 @@
 
 
       h2.my-course-body-tabs__tab-title Диалог с Куратором
-      include ../sections/profile-article-comment-8
-      include ../sections/profile-article-comment-9
+      include comments/profile-article-comment-8
+      include comments/profile-article-comment-9
       include ../sections/profile-article-footer-crop
     //end my-course-body-tabs__tab-01
 
@@ -152,8 +152,8 @@
       //end my-course-body-tabs__materials
 
       h2.my-course-body-tabs__tab-title Диалог с Куратором
-      include ../sections/profile-article-comment-8
-      include ../sections/profile-article-comment-9
+      include comments/profile-article-comment-8
+      include comments/profile-article-comment-9
       include ../sections/profile-article-footer-crop
 
     //end my-course-body-tabs__tab-02
