--- a/src/pug/sections/profile-articles.pug
+++ b/src/pug/sections/profile-articles.pug
@@ -2,8 +2,8 @@
 .profile-articles
   include profile-all-info
   include profile-counters
-  include profile-article-01
-  include profile-article-02
-  include profile-article-03
-  include profile-article-04
+  include articles/profile-article-01
+  include articles/profile-article-02
+  include articles/profile-article-03
+  include articles/profile-article-04
 //end profile-articles
