--- a/src/pug/sections/top/profile-top-teacher.pug
+++ b/src/pug/sections/top/profile-top-teacher.pug
@@ -32,11 +32,11 @@
         .profile-top-teacher__rait
           span Рейтинг
           .profile-top-teacher__rait-svg.profile-top-teacher__rait-svg--4
-            include ../elements/yellow-star
-            include ../elements/yellow-star
-            include ../elements/yellow-star
-            include ../elements/yellow-star
-            include ../elements/yellow-star
+            include ../../elements/yellow-star
+            include ../../elements/yellow-star
+            include ../../elements/yellow-star
+            include ../../elements/yellow-star
+            include ../../elements/yellow-star
 
         a(href="#").btn.btn--dark Курсы преподавателя
         a(href="#").btn.btn--white Добавить в избранное
