--- a/src/pug/sections/articles/profile-article-04-alien.pug
+++ b/src/pug/sections/articles/profile-article-04-alien.pug
@@ -1,5 +1,5 @@
-//begin profile-article-02
-.profile-article.profile-article-02
+//begin profile-article-04
+.profile-article.profile-article-04
   //begin profile-article__header
   header.profile-article__header
     //begin header-row-title
@@ -24,24 +24,11 @@
 
   //begin profile-article__body
   .profile-article__body
-    .profile-article__body-text
-      p Включает в себя фундаментальную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладную психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в естественных условиях, и практическую психологию, занимающуюся применением психологических знаний на практике.
-    a(href="#").profile-article__body-more Полный текст
+    a(href="assets/img/profile-article.jpg" data-fancybox="gallery").profile-article__body-img
+      img(src="assets/img/profile-article.jpg" alt="article")
+
     .profile-article__body-footer
-      .profile-article__tags
-        - var x = 3;
-        - var h = 17;
-        ul.profile-article__tags-list
-          - for (var i=1; i<=x; i++) {
-          li.profile-article__tags-item
-            a(href="#").profile-article__tags-link #психология
-          - }
-          - for (var i=1; i<=h; i++) {
-          li.profile-article__tags-item.hidden
-            a(href="#").profile-article__tags-link #психология
-          - }
-          li.profile-article__tags-item.profile-article__tags-item--arrow
-            +svg('arr-down')
+      include ../../elements/hashtags
 
       //begin profile-article__icons
       .profile-article__icons
@@ -62,26 +49,18 @@
               path(fill='none', stroke='#4d4ce0', stroke-width='2', d='M11.992 0c6.623 0 11.992 4.658 11.992 10.405 0 5.746-5.369 10.405-11.992 ' +
               '10.405-.636 0-1.26-.044-1.87-.127C7.546 23.434 4.572 23.927 1.6 24v-.673c1.605-.84 2.898-2.37 ' +
               '2.898-4.118 0-.244-.018-.484-.05-.718C1.733 16.584 0 13.67 0 10.405 0 4.658 5.369 0 11.992 0z')
-          span.profile-article__icons-count 2
+          span.profile-article__icons-count 0
         //end profile-article__icon
 
         //begin profile-article__icon
         .profile-article__icons-icon
-          .profile-article__icon-star.active
+          .profile-article__icon-star
             svg(viewBox='-1 -1 30 27')
               path.svg-star(fill='transparent', stroke='#4d4ce0', stroke-width='2', d='M20.98 25c-.158 0-.317-.025-.47-.078l-7.01-2.414v0l-7.012 2.414c-.433.15-.916.082-1.29-.18a1.34 1.34 0 0 1-.575-1.133l.204-7.204v0L.29 10.694A1.319 1.319 0 0 1 .068 9.45a1.38 1.38 0 0 1 .935-.88l7.136-2.038v0L12.346.588A1.413 1.413 0 0 1 13.5 0c.46 0 .892.22 1.153.588l4.207 5.944v0l7.137 2.038c.442.126.792.456.934.88.143.425.06.89-.221 1.244l-4.538 5.711v0l.205 7.204c.013.446-.203.87-.576 1.133a1.43 1.43 0 0 1-.822.259z', clip-path='url("#9s44a")')
         //end profile-article__icon
       //end profile-article__icons
   //end profile-article__body
 
-  //begin profile-article__comments
-  .profile-article__comments
-    include profile-article-comment
-    include profile-article-comment-7
-    include profile-article-comment-2
+  include ../profile-article-footer-crop
 
-  //end profile-article__comments
-
-  include profile-article-footer-crop
-
-//end profile-article-02
+//end profile-article-04
