--- a/src/pug/sections/top/profile-top-comments.pug
+++ b/src/pug/sections/top/profile-top-comments.pug
@@ -4,19 +4,21 @@
     //begin profile-top__left
     .profile-top__left
       .profile-top__ava
-        img(src="assets/img/profile-top-ava-2.jpg" alt="avatar")
+        img(src="assets/img/profile-top-ava.jpg" alt="avatar")
     //end profile-top__left
 
     //begin profile-top__right
     .profile-top__right
-      //begin profile-top__add
-      .profile-top__add
-        button.btn.btn--white Добавить в избранное
-      //end profile-top__add
+      //begin profile-top__edit
+      .profile-top__edit
+        .profile-top__edit-icon
+          +svg('edit')
+        span.profile-top__edit-text Редактировать
+      //end profile-top__edit
 
       //begin profile-top__info
       .profile-top__info
-        h2.profile-top__info-name Светлана Константинова
+        h2.profile-top__info-name Мария Иванова
         .profile-top__info-row
           span.profile-top__info-title Место жительства:
           span.profile-top__info-info Россия, Кротовка
@@ -31,7 +33,7 @@
       //begin profile-top__status
       .profile-top__status
         .profile-top__status-rait
-          include ../elements/red-star
+          include ../../elements/red-star
           span 10 000
         span.profile-top__status-position Лидер сообщества
       //end profile-top__status
