--- a/src/pug/sections/top/profile-top.pug
+++ b/src/pug/sections/top/profile-top.pug
@@ -1,10 +1,10 @@
 //begin profile-top
-.profile-top(style="background-image:url('assets/img/bg-profile-top.jpg')")
+.profile-top(style="background-image:url('assets/img/bg-profile-top-3.jpg')")
   .container
     //begin profile-top__left
     .profile-top__left
       .profile-top__ava
-        //-img(src="assets/img/profile-top-ava.jpg" alt="avatar")
+        img(src="assets/img/profile-top-ava.jpg" alt="avatar")
     //end profile-top__left
 
     //begin profile-top__right
@@ -20,17 +20,22 @@
       .profile-top__info
         h2.profile-top__info-name Мария Иванова
         .profile-top__info-row
-          span.profile-top__info-title Пожалуйста, заполните ваш профиль
+          span.profile-top__info-title Место жительства:
+          span.profile-top__info-info Россия, Кротовка
         .profile-top__info-row
-          a(href="#").btn.btn--dark Заполнить профиль
+          span.profile-top__info-title День рождения:
+          span.profile-top__info-info 19 января 1985
+        .profile-top__show-more
+          .profile-top__show-more-open Показать подробную информацию
+          .profile-top__show-more-close Скрыть подробную информацию
       //end profile-top__info
 
       //begin profile-top__status
       .profile-top__status
         .profile-top__status-rait
-          include ../elements/red-star
-          span 1
-        span.profile-top__status-position Новичок
+          include ../../elements/red-star
+          span 10 000
+        span.profile-top__status-position Лидер сообщества
       //end profile-top__status
 
     //begin profile-top__right
