--- a/src/style/sections/_profile-article.scss
+++ b/src/style/sections/_profile-article.scss
@@ -36,6 +36,32 @@
   color: #4d4ce0;
 }
 
+.profile-article__body-unmore {
+  font-size: 12px;
+  position: relative;
+  padding-right: 20px;
+  text-decoration: none;
+  color: #4d4ce0;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    bottom: 0;
+    width: 1px;
+    height: 10px;
+    margin: auto;
+    content: '';
+    background-color: #e4e4f2;
+  }
+}
+
+.profile-article__body-sneak {
+  font-size: 12px;
+  text-decoration: none;
+  color: #e4e4f2;
+}
+
 .profile-article__add-articles {
   display: flex;
   flex-direction: column;
@@ -194,3 +220,174 @@
 }
 
 //end profile-article__icons
+
+//begin profile-article__image-header
+.profile-article__image-header-wrap {
+  padding-top: 20px;
+}
+
+.profile-article__image-header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 250px;
+  padding: 20px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.article-image-header__author {
+  display: flex;
+  align-items: center;
+}
+
+.article-image-header__author-ava {
+  overflow: hidden;
+  width: 36px;
+  height: 36px;
+  margin-right: 20px;
+  border-radius: 50%;
+  img {
+    display: block;
+    width: 100%;
+  }
+}
+
+.article-image-header__author-name {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 0;
+  color: #fff;
+}
+
+.article-image-header__dropdown {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  &:hover {
+    .article-image-header__dropdown-list {
+      pointer-events: auto;
+      opacity: 1;
+    }
+  }
+}
+
+.article-image-header__dropdown-arr {
+  width: 10px;
+  height: 10px;
+  transform: rotate(-45deg);
+  border-bottom: 1px solid #fff;
+  border-left: 1px solid #fff;
+}
+
+.article-image-header__dropdown-list {
+  position: absolute;
+  top: -1px;
+  right: -2px;
+  overflow: hidden;
+  min-width: 230px;
+  margin: 0;
+  padding: 0;
+  transition: opacity .5s;
+  pointer-events: none;
+  opacity: 0;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .15);
+}
+
+.article-image-header__dropdown-item {
+  padding: 0;
+  list-style: none;
+  transition: .5s;
+  border-bottom: 1px solid #e4e4f2;
+  background-color: #fff;
+  &:last-child {
+    border-bottom: none;
+  }
+  &:hover {
+    background-color: $highlight-v;
+    .article-image-header__dropdown-link {
+      color: #fff;
+    }
+  }
+}
+
+.article-image-header__dropdown-link {
+  font-size: 14px;
+  font-weight: 300;
+  display: block;
+  padding: 10px 18px 9px 18px;
+  transition: color .5s;
+  text-decoration: none;
+  color: #99a1ba;
+}
+
+.article-image-header__title {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: center;
+  color: #fff;
+}
+
+.article-image-header__footer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.article-image-header__footer-date {
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+  padding-top: 10px;
+}
+
+.article-image-header__footer-date-svg {
+  margin-right: 12px;
+  svg {
+    fill: #99a1ba;
+    width: 16px;
+    height: 16px;
+  }
+}
+
+.article-image-header__footer-date-text {
+  font-size: 14px;
+  font-weight: 300;
+  display: block;
+  color: #fff;
+}
+
+.article-image-header__footer-direction {
+  display: flex;
+  padding-top: 10px;
+  span {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 23px;
+    display: block;
+    margin-right: 7px;
+    color: #fff;
+  }
+}
+
+//end profile-article__image-header
+
+.profile-article__body-full {
+  display: none;
+}
+
+.profile-article__body-half-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-article__body-half-pic {
+  width: calc(50% - 10px);
+  img {
+    display: block;
+    width: 100%;
+  }
+}
