did profile-blog

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -47,10 +47,12 @@
 @import 'sections/my-course-body-tabs';
 @import 'sections/my-course-homework-body-tabs';
 @import 'sections/my-course-final';
+@import 'sections/profile-blog-filter';
 
 //pages
 @import 'pages/index';
 @import 'pages/profile';
+@import 'pages/profile-blog';
 @import 'pages/profile-empty';
 @import 'pages/profile-money';
 @import 'pages/profile-invite';
