--- a/src/style/elements/_profile-aside-menu.scss
+++ b/src/style/elements/_profile-aside-menu.scss
@@ -85,6 +85,26 @@
   height: 16px;
 }
 
+.profile-aside__menu-svg--all-blogs svg {
+  width: 20px;
+  height: 13px;
+}
+
+.profile-aside__menu-svg--home svg {
+  width: 21px;
+  height: 17px;
+}
+
+.profile-aside__menu-svg--star-2 svg {
+  width: 18px;
+  height: 17px;
+}
+
+.profile-aside__menu-svg--message svg {
+  width: 18px;
+  height: 18px;
+}
+
 .profile-aside__menu-text {
   font-size: 15px;
   font-weight: 400;
